--- a/index.html
+++ b/index.html
@@ -22,7 +22,16 @@
         <div class="weather"></div>
         <div class="hi-low"></div>
       </div>
+      <div class="additional">
+        <div class="humidity"></div>
+        <div class="windspeed"></div>
+        <div class="sunlight"></div>
+      </div>
     </main>
+
+    <div class="crop">Crop drop-down</div>
+    <div class="details"></div>
+
   </div>
   <script src="script.js"></script>
 </body>
