--- a/index.html
+++ b/index.html
@@ -43,10 +43,15 @@
       <div class="details">
         
       </div>
+      
+      <div class="contact">
+        <a href="mailto:swastiknanda17@gmail.com" style="text-decoration: underline; color: azure;">Contact Us Via Email</a>
+        <p>Releasing aur AI based CHATBOT soon.</p>
+      </div>
     </main>
 
 
   </div>
-  <script src="script.js"></script>
+  <script src="script (3).js"></script>
 </body>
 </html>
