--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <script src="https://kit.fontawesome.com/13f8fb2909.js" crossorigin="anonymous"></script>
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/fontawesome.min.css" integrity="sha512-SgaqKKxJDQ/tAUAAXzvxZz33rmn7leYDYfBP+YoMRSENhf3zJyx3SBASt/OfeQwBHA1nxMis7mM3EV/oYT6Fdw==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Weather app</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
 </head>
 <body> 
   <div class="app-wrap">
@@ -45,8 +48,9 @@
       </div>
       
       <div class="contact">
-        <a href="mailto:swastiknanda17@gmail.com" style="text-decoration: underline; color: azure;">Contact Us Via Email</a>
-        <p>Releasing aur AI based CHATBOT soon.</p>
+       <p> <i class="fa fa-envelope" aria-hidden="true"></i>  <a href="mailto:swastiknanda17@gmail.com" style="text-decoration: underline; color: azure;">Connect with our Guide.</a></p>
+        
+        <p><i class="fa fa-android" aria-hidden="true"></i>  &nbsp; Releasing aur AI based CHATBOT soon.</p>
       </div>
     </main>
 
